assets/css/style.css
:root {
  --background-color: #090F1F;
  --text-color: #ffffff;
  --text-color-alt: #f3f3f3;

  --title-color: #f1f1f1;
  --title-color-alt: #f3f3f3;
  --accent-color: #090F1F;
}

/* Fonts */

@font-face {
  font-family: 'Trap';
  src: url('../fonts/TrapMedium.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Trap';
  src: url('../fonts/TrapBlack.woff2') format('woff2');
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PP Monument Extended';
  src: url('../fonts/PPMonumentExtended-Regular.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PP Monument Extended';
  src: url('../fonts/PPMonumentExtended-Black.woff2') format('woff2');
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

@media screen and (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

body {
  cursor: default;
  margin: 0;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: "Trap", sans-serif;
  font-size: 100%;
}

h1,
p,
blockquote,
pre,
ol,
ul,
figure {
  padding: 0;
  margin: 0;
}

img {
  width: auto;
  max-height: 100%;
  border: none;
  display: block;
}

article,
aside,
figure,
footer,
header,
aside,
main,
nav {
  display: block;
}

.bg {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-image: linear-gradient(45deg, #6B86DD, #223861);
  z-index: -10;
}

.bg-detail {
  position: absolute;
  top: -20%;
  left: -25vw;
  width: 1200px;
  height: 1050px;
  background-image: linear-gradient(to top, #34528E, #090F1F);
  filter: blur(50px);
  border-radius: 50%;
  animation: deco 90s linear infinite;
}

.bg-detail-small {
  position: absolute;
  top: 10%;
  right: 20%;
  width: 250px;
  height: 200px;
  background-color: #090F1F;
  filter: blur(50px);
  border-radius: 50%;
  animation: deco-small 45s ease-in-out infinite;
}

@keyframes deco-small {
  0% {
    transform: translate(0px, 0px) rotateZ(-98deg);
    opacity: 0.3;
  }

  55% {
    transform: translate(-460px, 300px) rotateZ(190deg);
    opacity: 1;
  }

  100% {
    transform: translate(0px, 0px) rotateZ(-99deg);
    opacity: 0.2;
  }
}

@keyframes deco {
  0% {
    transform: translate(0px, 0px) rotateZ(-45deg);
  }

  37% {
    transform: translate(560px, 300px) rotateZ(150deg);
  }

  70% {
    transform: translate(200px, -50px) rotateZ(-140deg);
  }

  100% {
    transform: translate(0px, 0px) rotateZ(-45deg);
  }
}


*,
*:before,
*:after {
  box-sizing: border-box;
}

hr {
  color: #080808;
}

/* Anchor */

a {
  display: inline-block;
  position: relative;
  cursor: pointer;
  text-decoration: none;
  color: var(--text-color);
  transition: ease 150ms;
}

#link {
  padding: 0 2px;
  font-weight: 900;
}

#link:visited {
  color: var(--text-color);
}

#link:hover {
  transform: scale(1.05);
}

#link::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  height: 2px;
  width: 100%;
  transform: scaleX(0);
  border-radius: 10px;
  background-color: var(--text-color);
  transition: ease 150ms;
  z-index: -2;
}

#link:hover::before {
  transform: scaleX(1);
}

/* Header */

header {
  position: sticky;
  top: 0;
  z-index: 10;
  height: 68px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: 'PP Monument Extended';
}

.asterisk {
  width: 24px;
  animation: rotate-asterisk 60s infinite;
}

.name-container {
  cursor: pointer;
  display: flex;
  align-items: center;
  column-gap: 12px;
}

.name-container p {
  font-size: 0.8rem;
}

.links-container {
  display: flex;
  align-items: center;
  column-gap: 1rem;
  font-family: 'Trap';
  font-weight: normal;
  font-size: 1rem;
  height: 2rem;
}

.links-container a {
  opacity: 0.7;
}

.links-container a:hover {
  opacity: 1;
}

.language-selector {
  width: 28px;
  border-radius: 4px;
  overflow: hidden;
  transition: ease 100ms;
}

.language-selector a {
  display: block;
}

.language-selector:hover {
  transform: scale(1.1);
}

code {
  font-size: 0.9em;
}

p {
  font-size: 1.2rem;
}

.introduction-section {
  padding-bottom: clamp(5rem, 0.1rem + 10vw, 10rem);
  height: calc(100vh - 68px);
  display: flex;
  align-items: flex-end;
  justify-content: flex-start;
}

.arrow-indicator {
  position: absolute;
  display: flex;
  align-items: center;
  column-gap: 8px;
  bottom: 26px;
  opacity: 0.6;
  transition: 150ms ease-in;
}

.arrow-indicator a {
  padding-top: 2px;
  font-size: 12px;
}

.mouse-element {
  height: 24px;
  width: 16px;
  border: 2px solid white;
  border-radius: 10px;
}

.mouse-element::after {
  content: "";
  position: absolute;
  top: 5px;
  left: 6px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  background-color: white;
  animation: arrow 2s ease infinite;
}

.hide {
  opacity: 0;
}

@keyframes arrow {
  0% {
    transform: translateY(0px);
  }

  50% {
    transform: translateY(6px);
  }

  100% {
    transform: translateY(0px);
  }
}

.introduction {
  max-width: 940px;
  cursor: default;
}

.introduction h1 {
  font-family: 'PP Monument Extended';
  font-weight: normal;
  font-size: clamp(1.6rem, -3.5rem + 20vw - 5vh, 2.4rem);
  line-height: 1.4;
}

.description {
  max-width: clamp(660px, -3.5rem + 20vw, 100%);
  padding-top: 32px;
  display: grid;
  gap: 32px;
  grid-template-rows: 1fr auto;
}

.email-copy-container {
  cursor: pointer;
  text-decoration: none;
  width: fit-content;
  height: 1.4rem;
  position: relative;
}

.email-copy {
  display: block;
  transition: transform 150ms ease-in-out 0s, color 50ms ease;
  font-family: 'PP Monument Extended';
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.4;
  margin: 0;
}

.email-copy-container:active .email-copy {
  color: var(--accent-color);
}

.email-copy-container::after {
  content: "Click to copy";
  position: absolute;
  bottom: calc(50% - 0.4rem);
  left: 100%;
  width: max-content;
  margin-left: 8px;
  font-size: 0.7rem;
  color: #d3d3d3;
  font-style: italic;
  opacity: 0;
  transition: ease 0.2s;
  z-index: -1;
}

.email-copy-container:hover::after {
  opacity: 0.4;
}

.email-copy-container:active::after {
  content: "Copied!";
}

@keyframes rotate-asterisk {
  0% {
    transform: rotateZ(0deg);
  }

  100% {
    transform: rotateZ(360deg);
  }
}

.section-container {
  width: 90%;
  max-width: 1420px;
  margin: 0 auto;
}

.section-title {
  font-family: 'PP Monument Extended';
  font-weight: 900;
  text-transform: uppercase;
}

.work-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 8rem 2rem;
}

.work-image {
  max-height: 480px;
  display: flex;
  justify-content: center;
}

.work-image a {
  display: flex;
  justify-content: center;
}

.work-image img {
  object-fit: contain;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  transition: ease 200ms;
}

.work-image img:hover {
  transform: scale(1.015);
}

@media screen and (max-width: 920px) {
  .work-section {
    grid-template-columns: 1fr;
    gap: 5rem 0;
  }
}

@media screen and (max-width: 620px) {
  .work-section {
    width: 100vw;
  }

  .right-column {
    align-self: center;
  }

  .work-information {
    margin: 1rem 5%;
  }

  .email-copy-container::after {
    display: none;
  }
}

.project-section {
  margin-top: 6rem;
}

.project-container {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 1rem;
  margin: 2rem 0;
}

.project {
  /*max-width: 640px;*/
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  column-gap: 2rem;
}

.project a {
  margin-right: 0.4rem;
}

.contact-section {
  padding: 2rem 0 4rem 0;
}

.contact-container {
  max-width: 640px;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  column-gap: 2rem;
}

.contact-container p {
  line-height: 1.2;
}

.footer {
  font-size: 1.6rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer * {
  margin-bottom: 1rem;
}

.appear {
  transform: translateY(0px);
  transition: .4s ease-in-out;
}

.hidden {
  transform: translateY(20px);
  opacity: 0;
  visibility: hidden;
}

